[package]
name = "rust-pretty-assertions-bench"
version = "0.1.0"
authors = ["Tom Milligan <code@tommilligan.net>"]
edition = "2018"

[dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }
pretty_assertions = { path = "../rust-pretty-assertions" }

[[bench]]
name = "bench_main"
harness = false
